--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "uuidv4": "^6.2.13",
